@startuml FastBite_State_Delivery
title FastBite - Estados de Entrega (DeliveryStatus)

skinparam shadowing false

[*] --> PENDING : pagamento concluido cria entrega\nainda sem estafeta atribuido

PENDING --> PICKED_UP : estafeta atribuido chega ao restaurante\ne recolhe o pedido
PENDING --> FAILED : não foi possível atribuir/recolher\na entrega

PICKED_UP --> IN_TRANSIT : estafeta sai do restaurante\na caminho do cliente
PICKED_UP --> FAILED : problema após recolha impede\na continuação da entrega

IN_TRANSIT --> DELIVERED : cliente recebe o pedido\ne a entrega é concluída
IN_TRANSIT --> FAILED : algum problema\nimpede entrega final

DELIVERED --> [*]
FAILED --> [*]

@enduml
